[package]
name = "image2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
jpeg-to-pdf = "0.2.3"
walkdir = "2.5.0"
image = { version = "0.25.5", features = ["jpeg", "png", "avif", "avif-native"] }
tokio ={ version = "1.41.1", features = ["macros", "rt-multi-thread", "rt", "tracing"] }
futures = "0.3.31"
